Storage debug and scratch files in ~/.cache/virt-manager (bz 693028)

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -144,8 +144,8 @@ cloning the original guest.
 =item -d, --debug
 
 Print debugging information to the terminal when running the install process.
-The debugging information is also stored in C<$HOME/.virtinst/virt-clone.log>
-even if this parameter is omitted.
+The debugging information is also stored in
+C<~/.cache/virt-manager/virt-clone.log> even if this parameter is omitted.
 
 =back
 
