--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1346,8 +1346,8 @@ Only print fatal error messages.
 =item  -d, --debug
 
 Print debugging information to the terminal when running the install process.
-The debugging information is also stored in C<$HOME/.virtinst/virt-install.log>
-even if this parameter is omitted.
+The debugging information is also stored in
+C<~/.cache/virt-manager/virt-install.log> even if this parameter is omitted.
 
 =back
 
