virt-manager: Add USB3 convenience option to the controller UI
and a --controller usb3 option to virt-install

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -865,8 +865,7 @@ guest, use '--virt-type qemu'
 Attach a controller device to the guest. TYPE is one of:
 B<ide>, B<fdc>, B<scsi>, B<sata>, B<virtio-serial>, or B<usb>.
 
-Controller also supports the special value B<usb2>, which will set up
-a USB2 controller with fallback USB1 support.
+Controller also supports the special values B<usb2> and B<usb3>.
 
 =over 4
 
