docs: fix a typo in virt-install man page
s/hardisk/harddisk

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1353,7 +1353,7 @@ specify exactly what XML output you want. This option implies --quiet.
 Acts similarly to --print-xml, except requires specifying which install step
 to print XML for. Possible values are 1, 2, 3, or all. Stage 1 is typically
 booting from the install media, and stage 2 is typically the final guest
-config booting off hardisk. Stage 3 is only relevant for windows installs,
+config booting off harddisk. Stage 3 is only relevant for windows installs,
 which by default have a second install stage. This option implies --quiet.
 
 =item --noreboot
