man: fix a typo in virt-manager man page
s/-help/--help

Although '-help' could work, but we should not encourage
this, and also should be same as
the output of 'virt-manager -h' command.

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -22,7 +22,7 @@ The following options are accepted when running C<virt-manager>:
 
 =over 4
 
-=item -h, -help
+=item -h, --help
 
 Display command line help summary
 
