virt-install: add support for '--panic option'
Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

(crobinso: man page and cli tweaks)

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -1328,6 +1328,14 @@ details.
 
 =back
 
+=item --panic OPTS
+
+Attach a panic notifier device to the guest. For the recommended settings, use:
+
+--panic default
+
+See C<http://libvirt.org/formatdomain.html#elementsPanic> for complete details.
+
 =back
 
 =head2 Miscellaneous Options
