virt-xml: Fill in man page

--- a/man/virt-clone.pod
+++ b/man/virt-clone.pod
@@ -32,6 +32,10 @@ storage options via -file.
 
 Show the help message and exit
 
+=item --version
+
+Show program's version number and exit
+
 =item  --connect=URI
 
 Connect to a non-default hypervisor. See L<virt-install(1)> for details
