--- a/man/virt-convert.pod
+++ b/man/virt-convert.pod
@@ -38,6 +38,10 @@ default output format is a libvirt "image" XML definition
 
 Show the help message and exit
 
+=item --version
+
+Show program's version number and exit
+
 =back
 
 =head2 Conversion Options
