--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -44,6 +44,10 @@ guest storage (--disk, --filesystem or --nodisks), and an install option.
 
 Show the help message and exit
 
+=item --version
+
+Show program's version number and exit
+
 =item  --connect=URI
 
 Connect to a non-default hypervisor. If this isn't specified, libvirt
