--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -174,6 +174,11 @@ Expose the host CPUs configuration to the guest. This enables the guest to
 take advantage of many of the host CPUs features (better performance), but
 may cause issues if migrating the guest to a host without an identical CPU.
 
+=item B<--cpu host-model-only>
+
+Expose the nearest host CPU model configuration to the guest.
+It is the best CPU which can be used for a guest on any of the hosts.
+
 =back
 
 Use --cpu=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsCPU>
