man: fix a small typo in virt-manager man page
s/supportted/supported

Signed-off-by: Chen Hanxiao <chenhanxiao@cn.fujitsu.com>

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -83,7 +83,7 @@ Display the main window summarizing performance for all virtual machines
 on the host.
 
 =item --spice-disable-auto-usbredir
-Auto USB redirection is supportted by default. This option switches off it.
+Auto USB redirection is supported by default. This option switches off it.
 
 =back
 
