doc: do not mention state="on|off" for features
Closes: https://bugzilla.redhat.com/show_bug.cgi?id=1024700

Signed-off-by: Giuseppe Scrivano <gscrivan@redhat.com>

--- a/man/virt-image-xml.pod
+++ b/man/virt-image-xml.pod
@@ -110,9 +110,7 @@ or C<ppc>.
 
 The I<features> element indicates whether certain platform features should
 be on or off. Currently, the platform features are I<pae>, I<acpi>, and
-I<apic>. They can be turned on or off by giving a I<state> attribute of
-either C<on> or C<off>. When a feature is mentioned in the I<features>
-element, it defaults to C<on>.
+I<apic>. Omitting a togglable feature tag turns it off.
 
 =item The details of booting the image's operating system
 
