virt-manager: Allow domain name or ID for cli options

--- a/man/virt-manager.pod
+++ b/man/virt-manager.pod
@@ -62,20 +62,20 @@ The following C<DIALOG-WINDOW> options are currently available:
 
 Display the wizard for creating new virtual machines
 
-=item --show-domain-editor=UUID
+=item --show-domain-editor=NAME|ID|UUID
 
 Display the dialog for editing properties of the virtual machine with
-unique ID matching C<UUID>
+unique ID matching either the domain name, ID, or UUID
 
-=item --show-domain-performance=UUID
+=item --show-domain-performance=NAME|ID|UUID
 
 Display the dialog for monitoring performance of the virtual machine with
-unique ID matching C<UUID>
+unique ID matching either the domain name, ID, or UUID
 
-=item --show-domain-console=UUID
+=item --show-domain-console=NAME|ID|UUID
 
 Display the virtual console of the virtual machine with
-unique ID matching C<UUID>
+unique ID matching either the domain name, ID, or UUID
 
 =item --show-host-summary
 
